gary@meyer.net September 6, 1999

  Fixed bug.  Program didn't exit after editing.  KDE2 only.
  Fixed bug.  Variable editor didn't update icon.  KDE2 only.
  Changed default sorting.  Alphabetical with System Crontab on top.
  Removed -lkfm from Makefile.
  Change kcron.kdelnk to kcron.desktop.

gary@meyer.net September 7, 1999

  cttask.h, cttash.cpp, kttask.cpp
  Fixed bug.  New syscron task didn't let user enter "run as" field.

gary@meyer.net September 10, 1999

  Initial implementation of cut/copy/paste.

gary@meyer.net September 17, 1999

  Work around for Qt 2.0 ~QListViewItem bug.

gary@meyer.net November 1, 1999

  Released 0.5.

gary@meyer.net November 7, 1999

  Added KCron handbook.  Various bug fixes.
